[metadata]
name = td
version = 2.1
license = GPL-3.0-or-later
license_files = COPYING
author = Rainer Strotmann
author_email = rainer.strotmann@mailbox.org


[options]
packages = td
install_requires =
    typer
    pathlib
    CairoSVG
    pycairo
    rich
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    td = td.td:app
