[metadata]
name = trialdesign
version = 2.1.3
license = GPL-3.0-or-later
license_files = COPYING
author = Rainer Strotmann
author_email = rainer.strotmann@mailbox.org
description = Visualization of clinical study designs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = td
install_requires =
    typer
    pathlib
    CairoSVG
    pycairo
    rich
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    td = td.td:app

[flake8]
exclude = .git
max-line-length = 119